--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
     "import/prefer-default-export": 0,
     "react/jsx-props-no-spreading": 0,
     "react/prop-types": 0,
-    "no-undef": 0,
-    "import/no-extraneous-dependencies": 0
+    "no-undef": 1,
+    "import/no-extraneous-dependencies": 0,
+    "no-plusplus": 0,
+    "no-continue": 0
   }
 }
