--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "no-undef": 1,
     "import/no-extraneous-dependencies": 0,
     "no-plusplus": 0,
-    "no-continue": 0
+    "no-continue": 0,
+    "no-restricted-syntax": 0
   }
 }
